# face-detection

./: .gitignore  CMakeLists.txt  main.cpp
Archiver/: .gitignore  CMakeLists.txt  main.cpp
Archiver/Connection/: Connection.cpp  Connection.h  Message.h
Communication/: Connection.cpp  Connection.h  Message.h  MessageQueueConnection.cpp  MessageQueueConnection.h  SharedMemoryConnection.cpp  SharedMemoryConnection.h
Detector/: CMakeCache.txt  CMakeLists.txt  Detector  Detector.cbp  Makefile  cmake_install.cmake  log1.txt  log2.txt  log3.txt  main.cpp
Detector/Connection/: Connection.cpp  Connection.h  Message.h
Detector/Detection/: Detector.cpp  Detector.h
Producer/: CMakeCache.txt  CMakeLists.txt  Makefile  Producer  Producer.cbp  SCHED_DEADLINE_1.txt  SCHED_DEADLINE_99.txt  SCHED_FIFO_99.txt  SCHED_RR_1.txt  cmake_install.cmake  main.cpp
Producer/Camera/: Camera.cpp  Camera.h
Producer/Connection/: Connection.cpp  Connection.h  Message.h
Producer/tests/: schedDEADLINE0.txt  schedDEADLINE99.txt  schedFIFO0.txt  schedFIFO99.txt  schedRR0.txt  schedRR99.txt
Tests/: CMakeCache.txt  CMakeLists.txt  Makefile  Tests  Tests.cbp  cmake_install.cmake  main.cpp  results.txt
Tests/tests/: SCHED_DEADLINE_1.txt  SCHED_DEADLINE_99.txt  SCHED_FIFO_1.txt  SCHED_FIFO_99.txt  SCHED_RR_1.txt  SCHED_RR_99.txt  results.txt
